# repo2text

./: Cargo.toml  LICENSE  README.md  faktur.txt
src/: main.rs
